ui: fix padding on panel bodies to align

--- a/styles/_panels.scss
+++ b/styles/_panels.scss
@@ -58,7 +58,7 @@
     }
 
     .panel-body {
-        padding: 0px 15px 0px 15px;
+        padding: 0px 7px 0px 7px;
         p {
             font-size: 14px;
             color: $text-color;
